log/build_2024-07-07_17-08-14/stage_challenge/stderr.log
  File "/home/lucas/ros2_ws/install/stage_challenge/lib/python3.10/site-packages/stage_challenge/rrt2.py", line 33
    if self.px >= 6 and self.oz <= 0.785398
                                           ^
SyntaxError: expected ':'

